# libbase

./: .CMakeLists.txt.un~  .gitignore  1  1.txt  CMakeLists.txt  README.md  compile
include/: .macro_r.h.un~  .mc.h.un~  base.h  libmc_def.h  mc.h
include/defines/: ex.h  generator.h  libmd.h  libnet.h  ws_server.h
include/macros/: .base.h.un~  .e.h.un~  .g.h.un~  .l.h.un~  .m.h.un~  .macro.h.un~  .r.h.un~  .s.h.un~  base.h  e.h  g.h  l.h  m.h  macro.h  r.h  s.h  v.h
src/: CMakeLists.txt  arr.c  base.h  dt.c  err.c  libbase_def.h  libmc_def.h  list.c  log.c  mc.c  mem.c
test/: .log.c.un~  1.c  CMakeLists.txt  arr.c  dt.c  list.c  log.c  mem.c
